tests/ui/fail/non_string_guid.stderr
error: uuids must be string literals
 --> $DIR/non_string_guid.rs:4:12
  |
4 |     #[uuid(cc2d05c7-7d20-4ccb-ad75-1e7fb7c77254)]
  |            ^^^^^^^^
